MTP-1278 Fix Top-task text overflow
- Part of MTP-1275 issue

--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -179,3 +179,11 @@ strong {
 .children-spaced-xxs {
   @include children-spaced(var(--spacer-xx-small));
 }
+
+h1,h2,h3,h4,h5,h6,
+table th,
+.summary-list,
+.disclosure-header,
+.top-task{
+  word-break: break-word;
+}
